[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/letraCounter.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/GUI.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.686275, 0.227451, 0.227451, 1 )
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.282353, 0.262745, 0.262745, 1 )
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 984.0
margin_bottom = 560.0
mouse_filter = 2

[node name="TopRow" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_right = 944.0
margin_bottom = 85.0
rect_pivot_offset = Vector2( -1489, -111 )
mouse_filter = 2
size_flags_vertical = 3

[node name="MiddleRow" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_top = 89.0
margin_right = 944.0
margin_bottom = 430.0
mouse_filter = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="BottonRows3" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_top = 434.0
margin_right = 944.0
margin_bottom = 520.0
mouse_filter = 2
size_flags_vertical = 3

[node name="LifeContainer" type="CenterContainer" parent="MarginContainer/Rows/BottonRows3"]
margin_right = 200.0
margin_bottom = 86.0

[node name="health_bar" type="ProgressBar" parent="MarginContainer/Rows/BottonRows3/LifeContainer"]
margin_top = 28.0
margin_right = 200.0
margin_bottom = 58.0
rect_min_size = Vector2( 200, 30 )
size_flags_horizontal = 2
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
min_value = 1.0
step = 5.0
value = 100.0

[node name="health_tween" type="Tween" parent="MarginContainer/Rows/BottonRows3/LifeContainer"]

[node name="AmmonSection" type="HBoxContainer" parent="MarginContainer/Rows/BottonRows3"]
margin_left = 204.0
margin_right = 944.0
margin_bottom = 86.0
size_flags_horizontal = 3
alignment = 2

[node name="currenAmonut" type="Label" parent="MarginContainer/Rows/BottonRows3/AmmonSection"]
margin_left = 710.0
margin_top = 19.0
margin_right = 710.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )

[node name="separator" type="Label" parent="MarginContainer/Rows/BottonRows3/AmmonSection"]
margin_left = 714.0
margin_top = 19.0
margin_right = 736.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "/"

[node name="maxAmmo" type="Label" parent="MarginContainer/Rows/BottonRows3/AmmonSection"]
margin_left = 740.0
margin_top = 19.0
margin_right = 740.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
